system/keycloak/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  # namespace: system
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 30443
  type: NodePort
