system/keycloak/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-keycloak
  namespace: system
spec:
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
    - Ingress
